@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-01T08:07:35Z",
+  "timestamp" : "2022-09-05T08:07:23Z",
   "count_outdated" : 51,
   "uniques_outdated" : 43,
-  "count" : 75,
-  "uniques" : 62,
+  "count" : 76,
+  "uniques" : 63,
   "clones" : [
     {
       "timestamp": "2022-08-22T00:00:00Z",
@@ -32,6 +32,13 @@
       "count_minmax": [ 5, 6 ],
       "uniques": 5,
       "uniques_minmax": [ 4, 5 ]
+    },
+    {
+      "timestamp": "2022-09-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
