@@ -1,5 +1,5 @@
 {
-  "count": 24,
+  "count": 25,
   "uniques": 14,
   "clones": [
     {
@@ -21,6 +21,11 @@
       "timestamp": "2022-08-31T00:00:00Z",
       "count": 6,
       "uniques": 5
+    },
+    {
+      "timestamp": "2022-09-04T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
