@@ -1,3 +1,11 @@
+2022-09-05T08:07:23Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2991662240
+* notice: last 14d: unq all: 14 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 43 51 / 62 75
+* notice: next accum: outdated-unq outdated-all / unq all: 43 51 / 63 76
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-04]
+
 2022-09-01T08:07:35Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2969951552
 * notice: last 14d: unq all: 14 24
